# BittyWorld

./: .eslintrc.json  .gitignore  BittyWorld Project Whitepaper.MD  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  tsconfig.json
client/: README.md  package.json
client/src/components/: HelloWorld.tsx
client/src/pages/: _document.tsx  index.tsx
client/src/styles/: globals.css
config/: game.json
contracts/: Cargo.toml  README.md
contracts/migrations/: placeholder.md
contracts/src/: lib.rs
contracts/src/instructions/: placeholder.rs
contracts/src/state/: placeholder.rs
contracts/tests/: basic.ts  placeholder.ts
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  GAMEPLAY.md  TOKENOMICS.md
scripts/: README.md  deploy.sh  migrate.sh  setup.sh
server/: README.md  package.json
server/src/: index.ts
server/src/controllers/: gameController.ts
server/src/routes/: game.ts  health.ts
server/src/types/: index.ts
server/src/utils/: logger.ts
tests/: README.md
tests/integration/: api.test.ts  placeholder.test.ts
tests/unit/: gameLogic.test.ts  placeholder.test.ts
