[package]
name = "bittyworld"
version = "0.1.0"
edition = "2021"
description = "BittyWorld Solana Smart Contracts"

[lib]
crate-type = ["cdylib", "lib"]
name = "bittyworld"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16"
anchor-lang = "0.28"
anchor-spl = "0.28"
spl-token = { version = "4.0", features = ["no-entrypoint"] }

[dev-dependencies]
anchor-test = "0.28"
solana-program-test = "1.16"
solana-sdk = "1.16" 